@@ -19,7 +19,6 @@ package org.graylog2.contentpacks.facades;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.jsontype.NamedType;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.graph.Graph;
@@ -87,6 +86,7 @@ import org.junit.Rule;
 import org.junit.Test;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
@@ -234,7 +234,7 @@ public class ViewFacadeTest {
         final StreamMock stream = new StreamMock(Collections.emptyMap());
         final Entity viewEntity = createViewEntity();
         final Map<EntityDescriptor, Object> nativeEntities = Map.of(EntityDescriptor.create(newStreamId, ModelTypes.STREAM_V1), stream);
-        final UserImpl fakeUser = new UserImpl(mock(PasswordAlgorithmFactory.class), new Permissions(ImmutableSet.of()),
+        final UserImpl fakeUser = new UserImpl(mock(PasswordAlgorithmFactory.class), new Permissions(Set.of()),
                 mock(ClusterConfigService.class), new ObjectMapperProvider().get(), ImmutableMap.of("username", "testuser"));
         when(userService.load("testuser")).thenReturn(fakeUser);
         final NativeEntity<ViewDTO> nativeEntity = facade.createNativeEntity(viewEntity,
@@ -283,12 +283,13 @@ public class ViewFacadeTest {
                 ValueReference.of("description"),
                 ValueReference.of(false),
                 ValueReference.of("matching-type"),
-                ImmutableList.of(),
-                ImmutableList.of(),
-                ImmutableList.of(),
-                ImmutableSet.of(),
+                List.of(),
+                List.of(),
+                List.of(),
+                Set.of(),
                 ValueReference.of(false),
-                ValueReference.of(true)
+                ValueReference.of(true),
+                List.of()
         );
         return EntityV1.builder()
                 .id(ModelId.of(newStreamId))
@@ -307,16 +308,16 @@ public class ViewFacadeTest {
         final SearchEntity searchEntity = SearchEntity.builder()
                 .queries(ImmutableSet.of(query))
                 .parameters(ImmutableSet.of())
-                .requires(ImmutableMap.of())
+                .requires(Map.of())
                 .createdAt(DateTime.now(DateTimeZone.UTC))
                 .build();
         final ViewStateEntity viewStateEntity = ViewStateEntity.builder()
-                .fields(ImmutableSet.of())
+                .fields(Set.of())
                 .titles(Titles.empty())
-                .widgets(ImmutableSet.of())
-                .widgetMapping(ImmutableMap.of())
-                .widgetPositions(ImmutableMap.of())
-                .formatting(FormattingSettings.builder().highlighting(ImmutableSet.of()).build())
+                .widgets(Set.of())
+                .widgetMapping(Map.of())
+                .widgetPositions(Map.of())
+                .formatting(FormattingSettings.builder().highlighting(Set.of()).build())
                 .displayModeSettings(DisplayModeSettings.empty())
                 .build();
         String newViewId = "5def958063303ae5f68edead";
@@ -326,8 +327,8 @@ public class ViewFacadeTest {
                 .title(ValueReference.of("title"))
                 .description(ValueReference.of("description"))
                 .search(searchEntity)
-                .properties(ImmutableSet.of())
-                .requires(ImmutableMap.of())
+                .properties(Set.of())
+                .requires(Map.of())
                 .state(ImmutableMap.of(newViewId, viewStateEntity))
                 .createdAt(DateTime.now(DateTimeZone.UTC))
                 .build();
